Add errorhandler module

--- a/package.json
+++ b/package.json
@@ -1,23 +1,24 @@
 {
-	"name": "reddit-clone",
-	"version": "0.0.1",
-	"private": true,
-	"scripts": {
-		"start": "node ./bin/www"
-	},
-	"dependencies": {
-		"body-parser": "~1.15.1",
-		"cookie-parser": "~1.4.3",
-		"debug": "~2.2.0",
-		"ejs": "~2.4.1",
-		"express": "~4.13.4",
-		"morgan": "~1.7.0",
-		"serve-favicon": "~2.3.0",
-		"mongoose": "~4.5.9",
-		"jsonwebtoken": "~7.1.9",
-		"passport-local": "~1.0.0",
-		"passport": "~0.3.2",
-		"express-jwt": "~3.4.0",
-		"nodemon": "~1.10.2"
-	}
+  "name": "reddit-clone",
+  "version": "0.0.1",
+  "private": true,
+  "scripts": {
+    "start": "node ./bin/www"
+  },
+  "dependencies": {
+    "body-parser": "~1.15.1",
+    "cookie-parser": "~1.4.3",
+    "debug": "~2.2.0",
+    "ejs": "~2.4.1",
+    "express": "~4.13.4",
+    "morgan": "~1.7.0",
+    "serve-favicon": "~2.3.0",
+    "mongoose": "~4.5.9",
+    "jsonwebtoken": "~7.1.9",
+    "passport-local": "~1.0.0",
+    "passport": "~0.3.2",
+    "express-jwt": "~3.4.0",
+    "nodemon": "~1.10.2",
+    "errorhandler": "~1.4.3"
+  }
 }
