--- a/package.json
+++ b/package.json
@@ -8,17 +8,17 @@
   "dependencies": {
     "body-parser": "~1.15.1",
     "cookie-parser": "~1.4.3",
-    "debug": "~2.2.0",
+    "debug": "~4.3.0",
     "ejs": "~2.5.7",
-    "express": "~4.13.4",
-    "morgan": "~1.7.0",
-    "serve-favicon": "~2.3.0",
-    "mongoose": "~4.5.9",
-    "jsonwebtoken": "~7.1.9",
-    "passport-local": "~1.0.0",
+    "errorhandler": "~1.4.3",
+    "express": "^4.17.1",
+    "express-jwt": "^6.1.0",
+    "jsonwebtoken": "^7.2.0",
+    "mongoose": "^6.0.12",
+    "morgan": "^1.10.0",
+    "nodemon": "^2.0.14",
     "passport": "~0.3.2",
-    "express-jwt": "~3.4.0",
-    "nodemon": "~1.10.2",
-    "errorhandler": "~1.4.3"
+    "passport-local": "~1.0.0",
+    "serve-favicon": "^2.5.0"
   }
 }
